Index.html Nearly Completed

--- a/index-fixed.html
+++ b/index-fixed.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="./assets/css/style-fixed.css">
 	</head>
 	<body>
 		<nav>
@@ -33,7 +33,7 @@
                 </div>
             </aside>
         </main>
-        <footer>
+        <footer id="footer-fixed">
             <div id="copyright">
                 &copy; Copyright 2017 Your Name
             </div>
