I believe I am DONE!

--- a/index-fixed-footer.html
+++ b/index-fixed-footer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="./assets/css/style-fixed.css">
 	</head>
 	<body>
 		<nav>
@@ -17,18 +17,10 @@
         <main>
             <section>
                 <div id="content">
-                    <header><h1>Portfolio</h1></header>
-                    <div class="portfolio-row">
-                        <div class="hangman"><a href="#"><h2>Hangman</h2></a></div>
-                        <div class="hangman"><a href="#"><h2>RPG Game</h2></a></div>
-                    </div>
-                    <div class="portfolio-row">
-                        <div class="hangman"><a href="#"><h2>Trivia Game</h2></a></div>
-                        <div class="hangman"><a href="#"><h2>Rutgers Info Widget</h2></a></div>
-                    </div>
-                    <div class="portfolio-row">
-                        <div class="hangman"><a href="#"><h2>Rock Paper Scissors</h2></a></div>
-                    </div>
+                    <header><h1>About Me</h1></header>
+                    <img src="assets/images/cat.PNG" alt="cat">
+                    <p>Marshmallow jelly soufflé pastry biscuit gummi bears tootsie roll tootsie roll gingerbread. Cotton candy muffin gingerbread fruitcake. Sweet roll soufflé topping wafer croissant oat cake gummi bears.<br/><br/>
+                        Jelly-o cheesecake dessert fruitcake ice cream brownie liquorice soufflé. Caramels biscuit gummi bears tiramisu chupa chups. Croissant macaroon cotton candy cake pudding.</p>
                 </div>
             </section>
             <aside>
@@ -41,7 +33,7 @@
                 </div>
             </aside>
         </main>
-        <footer> <!--id="footer-fixed" (move this into the footer tag)-->
+        <footer id="footer-fixed">
             <div id="copyright">
                 &copy; Copyright 2017 Your Name
             </div>
