--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
             </aside>
         </main>
-        <footer>
+        <footer> <!--id="footer-fixed" (move this into the footer tag)-->
             <div id="copyright">
                 &copy; Copyright 2017 Your Name
             </div>
