--- a/portfolio-fixed-footer.html
+++ b/portfolio-fixed-footer.html
@@ -17,10 +17,18 @@
         <main>
             <section>
                 <div id="content">
-                    <header><h1>About Me</h1></header>
-                    <img src="assets/images/cat.PNG" alt="cat">
-                    <p>Marshmallow jelly soufflé pastry biscuit gummi bears tootsie roll tootsie roll gingerbread. Cotton candy muffin gingerbread fruitcake. Sweet roll soufflé topping wafer croissant oat cake gummi bears.<br/><br/>
-                    Jelly-o cheesecake dessert fruitcake ice cream brownie liquorice soufflé. Caramels biscuit gummi bears tiramisu chupa chups. Croissant macaroon cotton candy cake pudding.</p>
+                    <header><h1>Portfolio</h1></header>
+                    <div class="portfolio-row">
+                        <div class="hangman"><h2>Hangman</h2></div>
+                        <div class="hangman"><h2>RPG Game</h2></div>
+                    </div>
+                    <div class="portfolio-row">
+                        <div class="hangman"><h2>Trivia Game</h2></div>
+                        <div class="hangman"><h2>Rutgers Info Widget</h2></div>
+                    </div>
+                    <div class="portfolio-row">
+                        <div class="hangman"><h2>Rock Paper Scissors</h2></div>
+                    </div>
                 </div>
             </section>
             <aside>
@@ -33,7 +41,7 @@
                 </div>
             </aside>
         </main>
-        <footer id="footer-fixed">
+        <footer id="footer-fixed"> <!--id="footer-fixed" (move this into the footer tag)-->
             <div id="copyright">
                 &copy; Copyright 2017 Your Name
             </div>
