--- a/portfolio-fixed-footer.html
+++ b/portfolio-fixed-footer.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="./assets/css/style-fixed.css">
+		<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 	</head>
 	<body>
 		<nav>
             <div id="nav-container">
                 <div id="name"><h1>Your Name</h1></div>
                 <div id="nav">
-                    <a href="about.html">About</a> | 
-                    <a href="portfolio.html">Portfolio</a> | 
-                    <a href="contact.html">Contact</a>
+                    <a href="about-fixed-footer.html">About</a> | 
+                    <a href="portfolio-fixed-footer.html">Portfolio</a> | 
+                    <a href="contact-fixed-footer.html">Contact</a>
                 </div>
             </div>
         </nav>
@@ -19,15 +19,15 @@
                 <div id="content">
                     <header><h1>Portfolio</h1></header>
                     <div class="portfolio-row">
-                        <div class="hangman"><h2>Hangman</h2></div>
-                        <div class="hangman"><h2>RPG Game</h2></div>
+                        <div class="hangman"><a href="#"><h2>Hangman</h2></a></div>
+                        <div class="hangman"><a href="#"><h2>RPG Game</h2></a></div>
                     </div>
                     <div class="portfolio-row">
-                        <div class="hangman"><h2>Trivia Game</h2></div>
-                        <div class="hangman"><h2>Rutgers Info Widget</h2></div>
+                        <div class="hangman"><a href="#"><h2>Trivia Game</h2></a></div>
+                        <div class="hangman"><a href="#"><h2>Rutgers Info Widget</h2></a></div>
                     </div>
                     <div class="portfolio-row">
-                        <div class="hangman"><h2>Rock Paper Scissors</h2></div>
+                        <div class="hangman"><a href="#"><h2>Rock Paper Scissors</h2></a></div>
                     </div>
                 </div>
             </section>
