Updated Links and Added Alert for Fixed Footer Files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 	</head>
 	<body>
+        <header><a href="index-fixed-footer.html">Click Here to See the Fixed Footer!</a></header>
 		<nav>
             <div id="nav-container">
                 <div id="name"><h1>Your Name</h1></div>
