--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 		<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 	</head>
 	<body>
-        <header><a href="index-fixed-footer.html">Click Here to See the Fixed Footer!</a></header>
+        <div id="Alert"><a href="index-fixed-footer.html">Click Here to See the Fixed Footer!</a></div>
 		<nav>
             <div id="nav-container">
                 <div id="name"><h1>Your Name</h1></div>
                 <div id="nav">
-                    <a href="about.html">About</a> | 
+                    <a href="index.html">About</a> | 
                     <a href="portfolio.html">Portfolio</a> | 
                     <a href="contact.html">Contact</a>
                 </div>
