--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
             <div id="nav-container">
                 <div id="name"><h1>Your Name</h1></div>
                 <div id="nav">
-                    <a href="about.html">About</a> | 
+                    <a href="index.html">About</a> | 
                     <a href="portfolio.html">Portfolio</a> | 
                     <a href="contact.html">Contact</a>
                 </div>
