--- a/index-fixed-footer.html
+++ b/index-fixed-footer.html
@@ -8,7 +8,7 @@
             <div id="nav-container">
                 <div id="name"><h1>Your Name</h1></div>
                 <div id="nav">
-                    <a href="about-fixed-footer.html">About</a> | 
+                    <a href="index-fixed-footer.html">About</a> | 
                     <a href="portfolio-fixed-footer.html">Portfolio</a> | 
                     <a href="contact-fixed-footer.html">Contact</a>
                 </div>
