--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <hr>
                     <a href="https://www.github.com/richardselz/"><img src="assets/images/git.png" alt="GitHub"></a>
                     <a href="https://www.linkedin.com/in/selznick"><img src="assets/images/linked.png" alt="LinkedIn" class="image-margin"></a>
-                    <a href="https://www.stackoverflow.com/richardselz"><img src="assets/images/stack.png" alt="Stack Overflow" class="image-margin"></a>
+                    <a href="https://stackoverflow.com/users/8361229/richardselz"><img src="assets/images/stack.png" alt="Stack Overflow" class="image-margin"></a>
                 </div>
             </aside>
         </main>
