Fixes for Validation

--- a/contact-fixed-footer.html
+++ b/contact-fixed-footer.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+        <title>Basic Portfolio</title>
 		<link rel="stylesheet" type="text/css" href="./assets/css/style-fixed.css">
 	</head>
 	<body>
