Corrected Some minor Errors

--- a/contact-fixed-footer.html
+++ b/contact-fixed-footer.html
@@ -25,7 +25,7 @@
                         <label>Email</label><br/>
                         <input type="text" name="email" placeholder="example@gmail.com"><br/>
                         <label>Message</label><br/>
-                        <textarea name="message" form="top-form" style="height:200px;">Enter your message here.. </textarea><br/>
+                        <textarea name="message" form="top-form" style="height:200px;" placeholder="Enter your message here.. "></textarea><br/>
                         <input type="submit" value="Submit" id="submit">
                     </form>
                     
