--- a/index-fixed-footer.html
+++ b/index-fixed-footer.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
         <title>Basic Portfolio</title>
-		<link rel="stylesheet" type="text/css" href="./assets/css/style-fixed.css">
+		<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 	</head>
 	<body>
 		<nav>
