Added Pointer to Submit in CSS x4

--- a/contact.html
+++ b/contact.html
@@ -21,11 +21,11 @@
                 <div id="content">
                     <header><h1>Contact</h1></header>
                     <form id="top-form">
-                        <label>Name</label><br/>
+                        <label>Name</label>
                         <input type="text" name="name" placeholder="John Smith"><br/>
-                        <label>Email</label><br/>
-                        <input type="text" name="email" placeholder="example@gmail.com"><br/>
-                        <label>Message</label><br/>
+                        <label>Email</label>
+                        <input type="text" name="email" placeholder="example@gmail.com">
+                        <label>Message</label>
                         <textarea name="message" form="top-form" style="height:200px;" placeholder="Enter your message here.. "></textarea><br/>
                         <input type="submit" value="Submit" id="submit">
                     </form>
