Updated CSS and Names

--- a/contact-fixed-footer.html
+++ b/contact-fixed-footer.html
@@ -8,7 +8,7 @@
 	<body>
 		<nav>
             <div id="nav-container">
-                <div id="name"><h1>Your Name</h1></div>
+                <div id="name"><h1>Richard Selznick</h1></div>
                 <div id="nav">
                     <a href="index-fixed-footer.html">About</a> | 
                     <a href="portfolio-fixed-footer.html">Portfolio</a> | 
@@ -44,7 +44,7 @@
         </main>
         <footer id="footer-fixed"> <!--id="footer-fixed" (move this into the footer tag)-->
             <div id="copyright">
-                &copy; Copyright 2017 Your Name
+                &copy; Copyright 2017 Richard Selznick
             </div>
         </footer>
 	</body>
