--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div id="Alert"><a href="index-fixed-footer.html">Click Here to See the Fixed Footer!</a></div>
 		<nav>
             <div id="nav-container">
-                <div id="name"><h1>Your Name</h1></div>
+                <div id="name"><h1>Richard Selznick</h1></div>
                 <div id="nav">
                     <a href="index.html">About</a> | 
                     <a href="portfolio.html">Portfolio</a> | 
@@ -39,7 +39,7 @@
         </main>
         <footer> <!--id="footer-fixed" (move this into the footer tag)-->
             <div id="copyright">
-                &copy; Copyright 2017 Your Name
+                &copy; Copyright 2017 Richard Selznick
             </div>
         </footer>
 	</body>
